[gd_scene load_steps=26 format=2]

[ext_resource path="res://system/code/exit_on_esc.gd" type="Script" id=1]
[ext_resource path="res://system/corners.tscn" type="PackedScene" id=2]
[ext_resource path="res://system/system.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/maps/aarmeda/terrain.tscn" type="PackedScene" id=4]
[ext_resource path="res://system/code/camera_rig.gd" type="Script" id=5]
[ext_resource path="res://system/motion_blur/motion_blur.tscn" type="PackedScene" id=6]
[ext_resource path="res://system/theme.tres" type="Theme" id=7]
[ext_resource path="res://system/code/fps.gd" type="Script" id=8]
[ext_resource path="res://game/hud/aim.png" type="Texture" id=9]
[ext_resource path="res://game/scenes/welcome.tscn" type="PackedScene" id=10]
[ext_resource path="res://game/gui/textures/panel_48x48x9.png" type="Texture" id=11]
[ext_resource path="res://game/maps/aarmeda/heigtmap.png" type="Texture" id=12]
[ext_resource path="res://game/maps/aarmeda/pixelmap.png" type="Texture" id=13]
[ext_resource path="res://game/code/compass.gd" type="Script" id=14]
[ext_resource path="res://game/gui/textures/compass_base.png" type="Texture" id=15]
[ext_resource path="res://system/fonts/icons.tres" type="DynamicFont" id=16]
[ext_resource path="res://game/code/map.gd" type="Script" id=17]
[ext_resource path="res://game/gui/textures/map_poi_here.png" type="Texture" id=18]

[sub_resource type="Animation" id=1]

resource_name = "demo"
length = 4.0
tracks/0/type = "animation"
tracks/0/path = NodePath("PLAYER/GUI/middle/welcome/welcome/welcome-anim")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "fade-out" ),
"times": PoolRealArray( 2 )
}

[sub_resource type="CanvasItemMaterial" id=2]

blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=3]

blend_mode = 2

[sub_resource type="CanvasItemMaterial" id=4]

blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=5]

blend_mode = 2

[sub_resource type="CanvasItemMaterial" id=6]

blend_mode = 1

[sub_resource type="Animation" id=7]

length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bottom/movement:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -96, -76 ), Vector2( -96, -80 ), Vector2( -96, -76 ) ]
}

[node name="game" type="Node"]
script = ExtResource( 1 )

[node name="corners" parent="." instance=ExtResource( 2 )]

[node name="camera_b" type="Camera" parent="."]
transform = Transform( 0.585068, -0.21221, 0.782727, 0.0146962, 0.967773, 0.251394, -0.810851, -0.135579, 0.569332, 4.815, 7.379, 20.02 )
fov = 75.0
far = 64.0

[node name="system" parent="." instance=ExtResource( 3 )]

[node name="SUN" parent="system" index="0"]
transform = Transform( 0.806238, -0.562092, -0.18448, -2.72617e-08, -0.311837, 0.950136, -0.591591, -0.766036, -0.251415, 0, 6.42785, 0 )
shadow_color = Color( 0, 0.309804, 0.372549, 1 )
shadow_reverse_cull_face = true

[node name="animations" type="AnimationPlayer" parent="."]
autoplay = "demo"
anims/demo = SubResource( 1 )

[node name="aarmeda" parent="." instance=ExtResource( 4 )]
editor/display_folded = true

[node name="reference" parent="aarmeda" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 8, 24 )

[node name="PLAYER" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 4, 2 )
script = ExtResource( 5 )

[node name="camera_a" type="Camera" parent="PLAYER"]
editor/display_folded = true
current = true
fov = 75.0
far = 64.0

[node name="motion_blur" parent="PLAYER/camera_a" instance=ExtResource( 6 )]

[node name="HUD" type="Control" parent="PLAYER"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="fps" type="Label" parent="PLAYER/HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -384.0
margin_right = 384.0
margin_bottom = 16.0
text = "Frames per second: 060"
align = 1
valign = 2
script = ExtResource( 8 )

[node name="center" type="Control" parent="PLAYER/HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="aim" type="Sprite" parent="PLAYER/HUD/center"]
texture = ExtResource( 9 )

[node name="right" type="Control" parent="PLAYER/HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -60.0
margin_top = 60.0
margin_right = -60.0
margin_bottom = 60.0

[node name="GUI" type="Control" parent="PLAYER"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="middle" type="Control" parent="PLAYER/GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="welcome" type="Control" parent="PLAYER/GUI/middle"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="welcome" parent="PLAYER/GUI/middle/welcome" instance=ExtResource( 10 )]
margin_top = -48.0
margin_bottom = 48.0

[node name="header" parent="PLAYER/GUI/middle/welcome/welcome" index="1"]
text = "The Quest"

[node name="paragraph" parent="PLAYER/GUI/middle/welcome/welcome" index="2"]
text = "Just get familiar with the island maze."

[node name="ver" type="Control" parent="PLAYER/GUI"]
anchor_left = 1.0
anchor_right = 1.0

[node name="HUD" type="Control" parent="PLAYER/GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 2.0
__meta__ = {
"_edit_lock_": true
}

[node name="left2" type="Control" parent="PLAYER/GUI/HUD"]
margin_left = 100.0
margin_top = 88.0
margin_right = 100.0
margin_bottom = 88.0

[node name="bottom" type="Control" parent="PLAYER/GUI/HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -80.0
margin_bottom = -80.0

[node name="movement" type="NinePatchRect" parent="PLAYER/GUI/HUD/bottom"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -76.0
margin_right = 96.0
margin_bottom = 66.0
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 144, 144 )
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="labels2" type="HBoxContainer" parent="PLAYER/GUI/HUD/bottom/movement"]
editor/display_folded = true
modulate = Color( 0.937255, 0.870588, 0.517647, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 13.0
margin_right = -9.0
margin_bottom = -105.0
custom_constants/separation = 4
alignment = 1

[node name="box" type="Container" parent="PLAYER/GUI/HUD/bottom/movement/labels2"]
margin_left = 12.0
margin_right = 60.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 24 )

[node name="a" type="Label" parent="PLAYER/GUI/HUD/bottom/movement/labels2/box"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Q"
align = 1
valign = 1

[node name="box2" type="Container" parent="PLAYER/GUI/HUD/bottom/movement/labels2"]
margin_left = 64.0
margin_right = 112.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 24 )

[node name="b" type="Label" parent="PLAYER/GUI/HUD/bottom/movement/labels2/box2"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "W"
align = 1
valign = 1

[node name="box3" type="Container" parent="PLAYER/GUI/HUD/bottom/movement/labels2"]
margin_left = 116.0
margin_right = 164.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 24 )

[node name="x" type="Label" parent="PLAYER/GUI/HUD/bottom/movement/labels2/box3"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "E"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PLAYER/GUI/HUD/bottom/movement"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0
margin_bottom = -6.0
custom_constants/separation = 0
alignment = 1

[node name="top" type="HBoxContainer" parent="PLAYER/GUI/HUD/bottom/movement/VBoxContainer"]
margin_top = 8.0
margin_right = 192.0
margin_bottom = 56.0
custom_constants/separation = 4
alignment = 1

[node name="turn_left" type="Button" parent="PLAYER/GUI/HUD/bottom/movement/VBoxContainer/top"]
margin_left = 20.0
margin_right = 68.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
text = "< Turn"
clip_text = true

[node name="front" type="Button" parent="PLAYER/GUI/HUD/bottom/movement/VBoxContainer/top"]
margin_left = 72.0
margin_right = 120.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
disabled = true
text = "Front"

[node name="turn_righ" type="Button" parent="PLAYER/GUI/HUD/bottom/movement/VBoxContainer/top"]
margin_left = 124.0
margin_right = 172.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
text = "Turn >"
clip_text = true

[node name="bottom" type="HBoxContainer" parent="PLAYER/GUI/HUD/bottom/movement/VBoxContainer"]
margin_top = 56.0
margin_right = 192.0
margin_bottom = 104.0
custom_constants/separation = 4
alignment = 1

[node name="left" type="Button" parent="PLAYER/GUI/HUD/bottom/movement/VBoxContainer/bottom"]
margin_left = 20.0
margin_right = 68.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
disabled = true
text = "Left"
clip_text = true

[node name="back" type="Button" parent="PLAYER/GUI/HUD/bottom/movement/VBoxContainer/bottom"]
margin_left = 72.0
margin_right = 120.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
disabled = true
text = "Back"
clip_text = true

[node name="right" type="Button" parent="PLAYER/GUI/HUD/bottom/movement/VBoxContainer/bottom"]
margin_left = 124.0
margin_right = 172.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
disabled = true
text = "Right"

[node name="labels3" type="HBoxContainer" parent="PLAYER/GUI/HUD/bottom/movement"]
editor/display_folded = true
modulate = Color( 0.937255, 0.870588, 0.517647, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 118.0
margin_right = -9.0
custom_constants/separation = 4
alignment = 1

[node name="box" type="Container" parent="PLAYER/GUI/HUD/bottom/movement/labels3"]
margin_left = 12.0
margin_right = 60.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 24 )

[node name="a" type="Label" parent="PLAYER/GUI/HUD/bottom/movement/labels3/box"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "A"
align = 1
valign = 1

[node name="box2" type="Container" parent="PLAYER/GUI/HUD/bottom/movement/labels3"]
margin_left = 64.0
margin_right = 112.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 24 )

[node name="b" type="Label" parent="PLAYER/GUI/HUD/bottom/movement/labels3/box2"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "S"
align = 1
valign = 1

[node name="box3" type="Container" parent="PLAYER/GUI/HUD/bottom/movement/labels3"]
margin_left = 116.0
margin_right = 164.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 24 )

[node name="x" type="Label" parent="PLAYER/GUI/HUD/bottom/movement/labels3/box3"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "D"
align = 1
valign = 1

[node name="_movement" type="Label" parent="PLAYER/GUI/HUD/bottom/movement"]
anchor_right = 1.0
margin_bottom = 11.0
text = "Movement"
align = 1
valign = 1

[node name="actions" type="NinePatchRect" parent="PLAYER/GUI/HUD/bottom"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 105.0
margin_top = -48.0
margin_right = 347.0
margin_bottom = 48.0
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 144, 144 )
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="_actions" type="Label" parent="PLAYER/GUI/HUD/bottom/actions"]
anchor_right = 1.0
margin_bottom = 11.0
text = "Actions"
align = 1
valign = 1

[node name="labels" type="HBoxContainer" parent="PLAYER/GUI/HUD/bottom/actions"]
editor/display_folded = true
modulate = Color( 0.937255, 0.870588, 0.517647, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 11.0
margin_right = -8.0
margin_bottom = -61.0
custom_constants/separation = 6
alignment = 1

[node name="box" type="Container" parent="PLAYER/GUI/HUD/bottom/actions/labels"]
margin_left = 8.0
margin_right = 56.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 24 )

[node name="a" type="Label" parent="PLAYER/GUI/HUD/bottom/actions/labels/box"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "A"
align = 1
valign = 1

[node name="box2" type="Container" parent="PLAYER/GUI/HUD/bottom/actions/labels"]
margin_left = 62.0
margin_right = 110.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 24 )

[node name="b" type="Label" parent="PLAYER/GUI/HUD/bottom/actions/labels/box2"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "B"
align = 1
valign = 1

[node name="box3" type="Container" parent="PLAYER/GUI/HUD/bottom/actions/labels"]
margin_left = 116.0
margin_right = 164.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 24 )

[node name="x" type="Label" parent="PLAYER/GUI/HUD/bottom/actions/labels/box3"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "X"
align = 1
valign = 1

[node name="box4" type="Container" parent="PLAYER/GUI/HUD/bottom/actions/labels"]
margin_left = 170.0
margin_right = 218.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 24 )

[node name="Label" type="Label" parent="PLAYER/GUI/HUD/bottom/actions/labels/box4"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Y"
align = 1
valign = 1

[node name="buttons" type="HBoxContainer" parent="PLAYER/GUI/HUD/bottom/actions"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 30.0
margin_bottom = -18.0
custom_constants/separation = 6
alignment = 1

[node name="a" type="Button" parent="PLAYER/GUI/HUD/bottom/actions/buttons"]
margin_left = 16.0
margin_right = 64.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
text = "Use"

[node name="b" type="Button" parent="PLAYER/GUI/HUD/bottom/actions/buttons"]
margin_left = 70.0
margin_right = 118.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
text = "Take"

[node name="x" type="Button" parent="PLAYER/GUI/HUD/bottom/actions/buttons"]
margin_left = 124.0
margin_right = 172.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
text = "Map"

[node name="y" type="Button" parent="PLAYER/GUI/HUD/bottom/actions/buttons"]
margin_left = 178.0
margin_right = 226.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
text = "Look"

[node name="inventory" type="NinePatchRect" parent="PLAYER/GUI/HUD/bottom"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -299.0
margin_top = -49.0
margin_right = -107.0
margin_bottom = 47.0
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 144, 144 )
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="_inventory" type="Label" parent="PLAYER/GUI/HUD/bottom/inventory"]
anchor_right = 1.0
margin_bottom = 11.0
text = "Inventory"
align = 1
valign = 1

[node name="Label" type="Label" parent="PLAYER/GUI/HUD/bottom/inventory"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
text = "Your pack is empty."
align = 1
valign = 1

[node name="left" type="Control" parent="PLAYER/GUI/HUD"]
editor/display_folded = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 60.0
margin_right = 60.0

[node name="stats" type="NinePatchRect" parent="PLAYER/GUI/HUD/left"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 144, 144 )
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="_stats" type="Label" parent="PLAYER/GUI/HUD/left/stats"]
anchor_right = 1.0
margin_bottom = 11.0
text = "Stats"
align = 1
valign = 1

[node name="statistics" type="VBoxContainer" parent="PLAYER/GUI/HUD/left/stats"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 16.0
margin_right = -8.0
margin_bottom = -8.0
custom_constants/separation = 8
alignment = 1

[node name="moves" type="Label" parent="PLAYER/GUI/HUD/left/stats/statistics"]
margin_top = 17.0
margin_right = 80.0
margin_bottom = 24.0
text = "Moves  010"
align = 1
valign = 1

[node name="treasures" type="Label" parent="PLAYER/GUI/HUD/left/stats/statistics"]
margin_top = 32.0
margin_right = 80.0
margin_bottom = 39.0
text = "Totems  000"
align = 1
valign = 1

[node name="map" type="Label" parent="PLAYER/GUI/HUD/left/stats/statistics"]
margin_top = 47.0
margin_right = 80.0
margin_bottom = 54.0
text = "Map %  032"
align = 1
valign = 1

[node name="right" type="Control" parent="PLAYER/GUI/HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -60.0
margin_top = 60.0
margin_right = -60.0
margin_bottom = 60.0

[node name="mini-map" type="NinePatchRect" parent="PLAYER/GUI/HUD/right"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = -48.0
margin_right = -52.0
margin_bottom = 48.0
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 144, 144 )
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="map" type="Sprite" parent="PLAYER/GUI/HUD/right/mini-map"]
material = SubResource( 2 )
position = Vector2( 17.5859, 21.357 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 12 )
centered = false

[node name="pixel_map" type="Sprite" parent="PLAYER/GUI/HUD/right/mini-map"]
material = SubResource( 3 )
position = Vector2( 17.5861, 21.357 )
scale = Vector2( 0.960013, 0.96 )
texture = ExtResource( 13 )
centered = false

[node name="Label" type="Label" parent="PLAYER/GUI/HUD/right/mini-map"]
anchor_right = 1.0
margin_bottom = 14.0
text = "Mapencja"
align = 1
valign = 1

[node name="compass" type="NinePatchRect" parent="PLAYER/GUI/HUD/right"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 144, 144 )
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
script = ExtResource( 14 )

[node name="_compass" type="Label" parent="PLAYER/GUI/HUD/right/compass"]
anchor_right = 1.0
margin_bottom = 11.0
text = "Compass"
align = 1
valign = 1

[node name="base" type="Sprite" parent="PLAYER/GUI/HUD/right/compass"]
position = Vector2( 48.5469, 51.9724 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 15 )

[node name="current" type="Label" parent="PLAYER/GUI/HUD/right/compass"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 5.0
margin_right = 1.0
margin_bottom = 5.0
text = "N"
align = 1
valign = 1

[node name="n" type="Label" parent="PLAYER/GUI/HUD/right/compass"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -6.0
margin_top = 12.0
margin_right = 6.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 16 )
text = "▲"

[node name="e" type="Label" parent="PLAYER/GUI/HUD/right/compass"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -6.0
margin_right = -10.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 16 )
text = "▷"

[node name="s" type="Label" parent="PLAYER/GUI/HUD/right/compass"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -27.0
margin_right = 7.0
margin_bottom = -8.0
custom_fonts/font = ExtResource( 16 )
text = "▽"

[node name="w" type="Label" parent="PLAYER/GUI/HUD/right/compass"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 14.0
margin_top = -6.0
margin_right = 26.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 16 )
text = "◁"

[node name="center" type="Control" parent="PLAYER/GUI/HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="map" type="NinePatchRect" parent="PLAYER/GUI/HUD/center"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -200.0
margin_right = 150.0
margin_bottom = 100.0
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 144, 144 )
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
script = ExtResource( 17 )

[node name="_map" type="Label" parent="PLAYER/GUI/HUD/center/map"]
anchor_right = 1.0
margin_bottom = 13.0
text = "Map of the Mystic Island"
align = 1
valign = 1

[node name="heightmap" type="Sprite" parent="PLAYER/GUI/HUD/center/map"]
modulate = Color( 0.686275, 0.694118, 0.45098, 1 )
material = SubResource( 4 )
position = Vector2( 24, 24 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 12 )
centered = false

[node name="pixelmap_black" type="Sprite" parent="PLAYER/GUI/HUD/center/map"]
modulate = Color( 1, 1, 1, 0.231373 )
material = SubResource( 5 )
position = Vector2( 23, 23 )
scale = Vector2( 4, 4 )
texture = ExtResource( 13 )
centered = false

[node name="pixelmap_white" type="Sprite" parent="PLAYER/GUI/HUD/center/map"]
modulate = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
self_modulate = Color( 1, 0.996078, 0.996078, 1 )
material = SubResource( 6 )
position = Vector2( 24, 24 )
scale = Vector2( 4, 4 )
texture = ExtResource( 13 )
centered = false

[node name="poi" type="Container" parent="PLAYER/GUI/HUD/center/map"]
margin_left = 25.0
margin_top = 25.0
margin_right = 281.0
margin_bottom = 281.0
rect_min_size = Vector2( 256, 256 )
__meta__ = {
"_edit_lock_": true
}

[node name="here" type="Sprite" parent="PLAYER/GUI/HUD/center/map/poi"]
position = Vector2( 128, 128 )
texture = ExtResource( 18 )

[node name="names" type="Control" parent="PLAYER/GUI/HUD/center/map"]
modulate = Color( 0.486275, 0.541176, 0.47451, 1 )
margin_left = 25.0
margin_top = 25.0
margin_right = 281.0
margin_bottom = 281.0
rect_min_size = Vector2( 256, 256 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label3" type="Label" parent="PLAYER/GUI/HUD/center/map/names"]
margin_left = 49.0
margin_top = 66.0
margin_right = 90.0
margin_bottom = 73.0
text = "Village"

[node name="Label4" type="Label" parent="PLAYER/GUI/HUD/center/map/names"]
margin_left = 150.0
margin_top = 10.0
margin_right = 237.0
margin_bottom = 17.0
text = "Mighty Forest"

[node name="Label7" type="Label" parent="PLAYER/GUI/HUD/center/map/names"]
margin_left = 87.0
margin_top = 201.0
margin_right = 123.0
margin_bottom = 208.0
text = "Docks"

[node name="Label6" type="Label" parent="PLAYER/GUI/HUD/center/map/names"]
margin_left = 243.0
margin_top = 103.0
margin_right = 293.0
margin_bottom = 120.0
rect_rotation = 90.0
text = "Little
Pyramid"
align = 1

[node name="Label5" type="Label" parent="PLAYER/GUI/HUD/center/map/names"]
margin_left = -8.0
margin_top = 183.0
margin_right = 53.0
margin_bottom = 200.0
rect_rotation = -90.0
text = "Lost 
Mountains"
align = 1

[node name="hud-anim" type="AnimationPlayer" parent="PLAYER/GUI/HUD"]
anims/jump = SubResource( 7 )

[connection signal="pressed" from="PLAYER/GUI/HUD/bottom/movement/VBoxContainer/top/turn_left" to="PLAYER" method="_on_turn_left_pressed"]
[connection signal="pressed" from="PLAYER/GUI/HUD/bottom/movement/VBoxContainer/top/front" to="PLAYER" method="_on_front_pressed"]
[connection signal="pressed" from="PLAYER/GUI/HUD/bottom/movement/VBoxContainer/top/turn_righ" to="PLAYER" method="_on_turn_righ_pressed"]
[connection signal="pressed" from="PLAYER/GUI/HUD/bottom/movement/VBoxContainer/bottom/left" to="PLAYER" method="_on_left_pressed"]
[connection signal="pressed" from="PLAYER/GUI/HUD/bottom/movement/VBoxContainer/bottom/back" to="PLAYER" method="_on_back_pressed"]
[connection signal="pressed" from="PLAYER/GUI/HUD/bottom/movement/VBoxContainer/bottom/right" to="PLAYER" method="_on_right_pressed"]
[connection signal="pressed" from="PLAYER/GUI/HUD/bottom/actions/buttons/a" to="PLAYER" method="_on_a_pressed"]
[connection signal="pressed" from="PLAYER/GUI/HUD/bottom/actions/buttons/x" to="PLAYER" method="_on_x_pressed"]

[editable path="system"]

[editable path="aarmeda"]

[editable path="PLAYER/GUI/middle/welcome/welcome"]
